frontend/test/should_fail/computations_no_return_001b.grg
pattern P(var input:int, def var output:int) modify(var inputput:int, def var outputput:int)
{
	yield {
		return(input);
	}
	
	modify {
		eval {
		}
	}
}
